<resources>
    <string name="app_name">BookingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="Yuzni_makiyaji">Yuzni makiyaji</string>
    <string name="narxi">Narxi</string>
    <string name="Spesialist_name">Chinora</string>
    <string name="spesialists">Spesialistlar</string>
    <string name="mutaxasislar">Mutaxasislar</string>
    <string name="time1">08:00</string>
    <string name="time2">09:00</string>
    <string name="time3">10:00</string>
    <string name="time4">11:00</string>
    <string name="time5">12:00</string>
    <string name="time6">15:00</string>
    <string name="time7">16:00</string>
    <string name="time8">17:00</string>
    <string name="book">Book</string>
    <string name="all_users">All Users</string>
    <string name="new_orders">New Orders</string>
    <string name="date">date</string>
    <string name="ro_yhatga_olinganlar">Ro\'yhatga olinganlar</string>
</resources>